# pocket-build

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DECISIONS.md  DECISIONS_STYLE_GUIDE.md  LICENSE  LICENSE-NOAI  README.md  REJECTED.md  ROADMAP.md  pocket-build.code-workspace  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  dependabot-automation.yml
dev/: check-license.sh  generate_test_protocol.py  make_script.py  make_single.py
src/: pocket-build.py
src/pocket_build/: __init__.py  __main__.py  actions.py  build.py  cli.py  config.py  config_resolve.py  config_types.py  config_validate.py  constants.py  logs.py  meta.py  pocket_build.py  runtime.py  types.py  utils.py  utils_core.py  utils_logs.py  utils_runtime.py  utils_schema.py  utils_types.py  utils_using_runtime.py
tests/: conftest.py  test_actions_watch.py  test_basic.py  test_build.py  test_build_filesystem.py  test_bundled_metadata.py  test_cli.py  test_cli_gitignore.py  test_cli_log_level.py  test_cli_overrides.py  test_cli_paths.py  test_cli_positionals.py  test_cli_watch.py  test_config.py  test_config_validate.py  test_make_script_integration.py  test_pocket_build.py  test_pytest.py  test_utils.py  test_utils_color.py  test_utils_core.py  test_utils_logs.py
tests/00-pytest-health-tests/: test_00_pytest.py  test_01_pytest_module_checks.py  test_02_pytest_no_from_module.py
tests/0_independant/: test_can_run_configless.py  test_capture_output.py  test_check_schema_conformance.py  test_collect_msg.py  test_detect_runtime_mode.py  test_flush_schema_aggregators.py  test_fnmatchcase_portable.py  test_is_excluded.py  test_is_excluded_raw.py  test_normalize_path_string.py  test_priv__compile_glob_recursive.py  test_priv__infer_type_label.py  test_priv__validate_list_value.py  test_priv__validate_scalar_value.py  test_priv__validate_typed_dict.py  test_pytest__runtime_mode_swap.py  test_remove_path_in_error_message.py
tests/10-test-utils-tests/: test_test_utils.py
tests/20-private-tests/: test_build_compute_dest.py  test_config_resolve_paths.py  test_config_validate_check_schema.py  test_config_validate_validators.py  test_utils_schema_validators.py
tests/30-utils-tests/: test_utils.py  test_utils_color.py  test_utils_is_exclude.py  test_utils_load_jsonc.py  test_utils_logs.py  test_utils_safe_isinstance.py  test_utils_schema.py  test_utils_schema_check.py
tests/50-build-tests/: test_build.py  test_build_filesystem.py
tests/5_core/: test_copy_directory.py  test_copy_file.py  test_copy_item.py  test_find_config.py  test_get_metadata.py  test_load_config.py  test_priv__compute_dest.py  test_priv__get_metadata_from_header.py  test_priv__normalize_path_with_root.py  test_resolve_build_config.py  test_resolve_config.py  test_run_build.py  test_watch_for_changes.py
tests/70-config-tests/: test_config.py  test_config_parse.py  test_config_resolve.py  test_config_validate.py  test_find_config.py  test_load_config.py  test_parse_config.py  test_validate_config.py
tests/80-cli-tests/: test_actions_watch.py  test_cli.py  test_cli_gitignore.py  test_cli_log_level.py  test_cli_overrides.py  test_cli_paths.py  test_cli_positionals.py
tests/90-integration-tests/: test_bundled_metadata.py  test_make_script_integration.py  test_standalone_metadata.py
tests/9_integration/: test_configs.py  test_gitignore.py  test_help.py  test_installed__execution.py  test_log_level.py  test_make_script.py  test_overrides.py  test_paths.py  test_script_contents.py  test_script_execution.py  test_selftest.py  test_standalone__contents.py  test_standalone__execution.py  test_version.py  test_watch.py
tests/_00_pytest_health_tests/: test_10_pytest_runtime_mode_swap.py  test_20_no_from_app_imports.py
tests/_30_utils_tests/_310_color_tests/: test_colorize.py  test_determine_color_enabled.py  test_should_use_color.py
tests/_30_utils_tests/_320_log_tests/: test_is_bypass_capture.py  test_log.py  test_safe_log.py
tests/_30_utils_tests/core_tests/: test_get_glob_root.py  test_load_jsonc.py  test_normalize_path_string.py  test_plural.py
tests/_30_utils_tests/runtime_tests/: test_get_glob_root.py  test_normalize_path_string.py
tests/_30_utils_tests/schema_tests/: test_check_schema_conformance.py  utils.py
tests/_30_utils_tests/schema_tests/private_tests/: test_infer_type_label.py  test_validate_list_value.py  test_validate_scalar_value.py  test_validate_typed_dict.py
tests/_30_utils_tests/type_tests/: test_is_excluded.py  test_is_excluded_raw.py  test_make_includeresolved.py
tests/_50_build_tests/: test_run_build.py
tests/_50_build_tests/filesystem_tests/: test_copy_directory.py  test_copy_file.py  test_copy_item.py
tests/_70_config_tests/: test_parse_config.py  test_resolve_build_config.py  test_resolve_config.py  test_validate_config.py
tests/_75_action_tests/watch_tests/private_tests/: test_collect_included_files.py  test_setup_parser.py
tests/_80_main_tests/: test_help.py  test_main_configs.py  test_main_exceptions.py  test_main_log_level.py  test_main_paths.py  test_main_version.py  test_main_watch.py
tests/_90_integration_tests/make_script_tests/: test_make_script_integration.py
tests/_90_integration_tests/standalone_tests/: test_script_contents.py  test_script_execution.py
tests/fixtures/: runtime_protocol.py
tests/private/: test_config_resolve_paths.py  test_config_validate_check_schema.py  test_config_validate_validators.py
tests/test-utils-tests/: test_test_utils.py
tests/utils/: __init__.py  buildconfig.py  check.py  config_validate.py  force_mtime_advance.py  log_fixtures.py  patch_everywhere.py  patch_imported_function.py  patch_runtime_function.py  proj_root.py  runtime_swap.py  strip_common_prefix.py  test_trace.py  trace.py
