# pyproject.toml

[project]
name = "pocket-build"
version = "0.1.0"
description = "A tiny build system that fits in your pocket"
authors = [
    {name = "Apathetic Tools"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
]

# --- Development tasks ---
[tool.poe.tasks]
# ðŸ§© All-in-one
"check:fix" = ["fix", "typecheck", "test"]

# ðŸ” Linting and static checks
check = ["lint", "typecheck",  "test"]
lint = ["lint:isort", "lint:ruff", "lint:compile"]
"lint:ruff" = "ruff check ."
"lint:isort" = ["lint:isort:installed", "lint:isort:script"]
"lint:isort:installed" = "isort . --check-only --color"
"lint:isort:script" = {shell = "if [ -f bin/pocket-build.py ]; then isort bin/pocket-build.py --check-only --color; fi" }
"lint:compile" = ["lint:compile:script"]
"lint:compile:script" = { shell = "if [ -f bin/pocket-build.py ]; then python -m py_compile bin/pocket-build.py; fi" }

# ðŸ§  Type checking
typecheck = "mypy src"

# ðŸ§ª Tests (runs both: installed + singlefile)
test = ["test:pytest:installed", "test:pytest:script"]
"test:pytest:installed" = "pytest"
"test:pytest:script" = [
  "build:script",
  { cmd = "pytest", env = { RUNTIME_MODE="singlefile" } }
]

# ðŸ§¹ Automated fixing / formatting
fix = ["fix:isort", "fix:ruff", "lint:compile", "fix:format"]
"fix:isort" = ["fix:isort:installed", "fix:isort:script"]
"fix:isort:installed" = "isort . --color"
"fix:isort:script" = {shell = "if [ -f bin/pocket-build.py ]; then isort bin/pocket-build.py --color; fi" }
"fix:ruff" = "ruff check . --fix"
"fix:format" = "ruff format ."

# ðŸ§© Build and license
"build:script" = "python dev/make_script.py"
"check:license" = "bash dev/check-license.sh"

# ðŸ§ª Internal verification
[tool.poe.tasks."verify:pytest"]
cmd = "pytest tests/test_pytest.py"
env = { RUNTIME_DEBUG = "1" }

# --- Development dependencies ---
[dependency-groups]
dev = [
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "poethepoet (>=0.37.0,<0.38.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pinliner @ git+https://github.com/The-city-not-present/pinliner.git",
    "pytest-dependency (>=0.6.0,<0.7.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)",
]

# --- Ruff: formatter and linter ---
[tool.ruff]
# target-version = # project.requires-python instead
line-length = 88
fix = true

[tool.ruff.lint]
#select = ["E", "F", "W"]
select = ["ALL"]

ignore = [
  "ANN401", # Dynamically typed expressions

  "COM812", # missing trailing comma (redundant with the formatter)

  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D203", # Force blank between class and docstring
  "D205", # 1 blank line required between summary line and description
  "D213", # Force first line of docstring """ to not have text
  "D400", # First line should end with a period
  "D401", # First line of docstring should be in imperative mood
  "D415", # First line should end with a period, question mark, or exclamation point

  "FBT003", # Boolean positional value in function call

  "I", # I: isort handles import sortinga

  "RET504", # Unnecessary assignment to `var` before `return` statement

  "RUF002", # Docstring contains ambiguous
  "RUF003", # Comment contains ambiguous

  "TRY300", # Consider moving this statement to an `else` block
]

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 5

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"bin/**/*.py" = [
  "T201", # print found
]
"dev/**/*.py" = [
  "T201", # print found
]
"tests/**/*.py" = [
  "S101", # Use of `assert` detected

  "T201", # print found
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# --- isort: formatter import sorting (and merging, which ruff doesn't do) ---
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = ["pocket_build"]
skip_gitignore = true

# --- Mypy: stricter typing options ---
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

# --- pytest: testing framework ---
# see pytest.ini
#   it has a alrge number of ignores
#   so we keep it separate
# [tool.pytest.ini_options]

# --- Black: kept in case someone runs it by accident in their editor ---
[tool.black]
# target-version = [] # project.requires-python instead
line-length = 88
skip-string-normalization = false


# --- Poetry Build System ---
[project.scripts]
pocket-build = "pocket_build.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{ include = "pocket_build", from = "src" }]
